# vcspull

./: .gitignore  .gitmodules  .python-version  .tmuxp.yaml  .tool-versions  .travis.yml  .windsurfrules  AGENTS.md  CHANGES  CLAUDE.md  LICENSE  MANIFEST.in  MIGRATION  Makefile  Pipfile  README.md  README.rst  TODO  bootstrap_env.py  conftest.py  fabfile.py  g.py  justfile  package_metadata.py  pyproject.toml  requirements.pip  run-tests.py  run_tests.py  scent.py  setup.cfg  setup.py  tox.ini
.claude/commands/: changelog.md  multi-model-review.md  rebase.md  review-feedback.md  solve-review.md  tdd-fix.md  update-libvcs.md
.claude/commands/multi-model/: ask.md  execute.md  fix-review.md  plan.md  prompt.md  review.md  solve.md
.codex/: instructions.md
.cursor/rules/: dev-loop.mdc  git-commits.mdc  pytest-best-practices.mdc  vcspull-pytest.mdc
.github/scripts/: check_deps.py
.github/workflows/: codeql-analysis.yml  docs.yml  publish-docs.yml  tests.yml  vcspull-ci.yml
analects/: __init__.py  __main__.py
doc/: Makefile  api.rst  cli.rst  conf.py  developing.rst  examples.rst  index.rst  quickstart.rst  requirements.pip  roadmap.rst
doc/_templates/: layout.html  more.html  page.html  star.html
docs/: AGENTS.md  Makefile  api.md  cli.md  cli.rst  conf.py  config-generation.md  configuration.md  developing.md  examples.md  history.md  index.md  index.rst  justfile  manifest.json  migration.md  moo  quickstart.md  quickstart.rst  redirects.txt
docs/_ext/: __init__.py  argparse_exemplar.py  argparse_lexer.py  argparse_roles.py  aspect_ratio.py  pretty_argparse.py  vcspull_console_lexer.py  vcspull_output_lexer.py
docs/_ext/sphinx_argparse_neo/: __init__.py  compat.py  directive.py  myst.py  nodes.py  parser.py  renderer.py  utils.py
docs/_static/css/: argparse-highlight.css  custom.css
docs/_static/demos/: setup-sandbox.sh
docs/_templates/: layout.html  page.html
docs/api/: config.md  config_models.md  exc.md  index.md  log.md  logger.md  types.md  util.md  validator.md
docs/api/cli/: add.md  fmt.md  import.md  index.md  status.md  sync.md
docs/api/internals/: index.md  private_path.md
docs/cli/: add.md  completion.md  config.md  discover.md  fmt.md  import.md  index.md  list.md  migrate.md  search.md  status.md  sync.md  trust.md  vcspull.md  worktree.md
docs/cli/import/: codeberg.md  codecommit.md  forgejo.md  gitea.md  github.md  gitlab.md  index.md
docs/cli/worktree/: index.md  list.md  prune.md  sync.md
docs/configuration/: generation.md  index.md  schema.md  scopes.md
docs/internals/: index.md
docs/internals/api/: config_reader.md  index.md  private_path.md  worktree_sync.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md
examples/: api_usage.py  christmas-tree.yaml  code-scholar.yaml  remotes.yaml  vcspull.yaml  worktrees.yaml
libvcs/: __init__.py  base.py  exc.py  git.py  hg.py  shortcuts.py  svn.py  util.py
notes/: 2025-03-08 - about.md  2025-03-08 - test-audit - pydantic-plan.md  2025-03-08 - test-audit - test plan.md  2025-03-08 - test-audit.md  2025-03-09 - audit.md  TODO.md  pydantic-implementation-plan.md  pydantic-overhaul.md  pydantic-v2.md  test-coverage.md
notes/proposals/: 00-summary.md  01-config-format-structure.md  02-validation-system.md  03-testing-system.md  04-internal-apis.md  05-external-apis.md  06-cli-system.md  07-cli-tools.md  08-implementation-documentation.md
pkg/: pullv.bash  pullv.tcsh  pullv.zsh  vcspull.bash  vcspull.tcsh  vcspull.zsh
pullv/: __init__.py  __main__.py  cli.py  exc.py  log.py  timed_subprocess.py  util.py
pullv/repo/: __init__.py  base.py  git.py  hg.py  svn.py
pullv/testsuite/: __init__.py  helpers.py  test_cli.py  test_config.py  test_repo_git.py  test_repo_hg.py  test_repo_object.py  test_repo_svn.py
requirements/: base.txt  dev.txt  doc.txt  test-py27.txt  test.txt
scripts/: generate_gitlab.py  generate_gitlab.sh  runtime_dep_smoketest.py  test_runtime_dep_smoketest.py
src/vcspull/: README.md  __about__.py  __init__.py  config.py  exc.py  log.py  models.py  operations.py  schemas.py  types.py  url.py  util.py  validator.py
src/vcspull/_internal/: __init__.py  config_reader.py  config_style.py  logger.py  (+4 more)
tests/: __init__.py  conftest.py  demo_worktree_commands.sh  helpers.py  test_cli.py  test_cli_commands.py  test_config.py  test_config_duplication.py  test_config_file.py  test_config_file_edge_cases.py  test_config_object.py  test_config_reader.py  test_config_writer.py  test_fixtures.py  test_log.py  test_model_serialization.py  test_path_edge_cases.py  test_repo.py  test_repo_git.py  test_repo_hg.py  test_repo_object.py  test_repo_svn.py  test_schemas.py  test_scopes.py  test_sync.py  test_url.py  test_url_validation.py  test_utils.py  test_validator.py  test_worktree.py
tests/_internal/: test_config_style.py  test_private_path.py  test_settings.py
tests/cli/: __init__.py  conftest.py  test_add.py  test_add_from_fs.py  test_colors.py  test_config.py  test_discover.py  test_fmt.py  test_formatter.py  test_help_examples.py  test_import.py  test_import_repos.py  test_list.py  test_main.py  test_migrate.py  test_pin_matrix.py  test_plan_output_helpers.py  test_search.py  test_status.py  test_sync_log_file.py  test_sync_plan_helpers.py  test_sync_progress.py  test_sync_sigint.py  test_sync_watchdog.py
tests/docs/: test_markdown_conventions.py
tests/fixtures/: __init__.py  _util.py  example.py  example1.yaml  example2.yaml  example_configs.py  expand.json  expand.yaml  repoduplicate1.yaml  repoduplicate2.yaml
tests/integration/: __init__.py  test_config_system.py
tests/unit/: __init__.py
vcspull/: __about__.py  __init__.py  __main__.py  _compat.py  cli.py  cli_defaultgroup.py  config.py  exc.py  log.py  util.py
vcspull/cli/: __init__.py  sync.py
vcspull/repo/: __init__.py  base.py  git.py  hg.py  svn.py
vcspull/testsuite/: __init__.py  cli.py  config.py  helpers.py  repo_git.py  repo_hg.py  repo_object.py  repo_svn.py  test_cli.py  test_config.py  test_repo_git.py  test_repo_hg.py  test_repo_object.py  test_repo_svn.py
(+131 files in other folders)
